# subtitle_gpt

./: .gitignore  Makefile  README.md  pyproject.toml
data/subtitles/: Le.Comte.de.Monte-Cristo.2024.FRENCH.1080p.WEB.H264-FW.srt  Le.Comte.de.Monte-Cristo.2024.en.V2.srt  The.Count.Of.Monte-Cristo.2024.1080p.BluRay.x264.AAC5.1-[YTS.MX].srt
src/subtitle_gpt/: __init__.py  main.py  main_ell.py  main_ell_demo.py
